Fix Work / Portfolio Area

--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -8,9 +8,8 @@
 
 .work__item {
     cursor: pointer;
-    color: var(--title-color);
+    /* color: var(--title-color); */
     padding: 0.25rem 0.75rem;
-    /* background-color: black; */
     font-weight: var(--font-medium);
     border-radius: 0.5rem;
     text-transform: capitalize;
@@ -18,7 +17,7 @@
 
 .work__item:hover {
     background-color: var(--title-color);
-    color: var(--title-color);
+    color: var(--container-color);
 }
 
 .work__container {
@@ -61,11 +60,12 @@
 
 .work__button:hover .work__button-icon {
     transform: translateX(0.25rem);
+    background-color: var(--title-color);
 }
 
 
 .active-work {
-    background-color: var(--);
+    background-color: var(--title-color);
     color: var(--container-color);
 }
 
