--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,4 +1,4 @@
-.qualification__container{
+.qualification__container {
   grid-template-columns: repeat(2, 769px);
   column-gap: 5rem;
   justify-content: right;
@@ -7,15 +7,10 @@
 .qualification__tabs {
   display: flex;
   justify-content: center;
-  padding: 1rem 6rem;
+  /* padding: 1rem 6rem; */
   margin-bottom: var(--mb-2);
 }
 
-.qualification__modal-services {
-  display: right;
-  align-items: right;
-  column-gap: .5rem;
-}
 .qualification__button {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
@@ -24,76 +19,70 @@
   cursor: pointer;
 }
 
+.qualification__button:hover {
+  color: var(--title-color-dark);
+}
+
 .qualification__content {
   background-color: var(--container-color);
-  /* border: 15px solid rgba(0, 0, 0, 0.1); */
   padding: 1rem 9rem;
   border-radius: 1.25rem;
-}  
+  /* display: none; */ 
+}
+
+.qualification__content-active {
+  display: block;
+}
+
+.qualification__data {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  column-gap: 1.5rem;
+}
+
+.qualification__icon {
+  font-size: 1.8rem;
+  margin-right: var(--mb-0-25)
+}
+
+.qualification__active {
+  color: var(--title-color-dark);
+}
+
+.qualification__sections {
+  display: grid;
+  grid-template-columns: 0.5fr;
+  justify-content: center;
+}
+
 
 .qualification__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  text-align: right;
-  margin-bottom: var(--mb-1-5);
 }
 
-/* .qualification__box {
-  display: flex;
-  justify-content: center;
-  column-gap:2.5rem;
-} */
-
-.qualification__group {
-  display: grid;
-  align-items: flex-start;
-  row-gap: 1rem;
+.qualification__subtitle {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1);
 }
 
-.qualification__data {
-  display: flex;
-  column-gap: 0.5rem;
+.qualification__calendar {
+  font-size: var(--small-font-size);
 }
 
-/* .skills .bx-badge-check {
-  font-size: 1rem;
-  color: var(--title-color);
-} */
-
-.qualificaion__name {
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-medium);
-  line-height: 18px;
+.qualification__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-color: var(--text-color);
+  border-radius: 50%;
 }
 
-.qualification__level {
-  font-size: var(--tiny-font-size);
-}
-
-/*============ BREAKPOINTS ======== */
-/* For large devices */
-@media screen and (max-width: 992px) {
-  .qualification__container{
-    grid-template-columns: max-content;
-    row-gap: 2rem;
-  }
-}
-
-/* FOR medium devices */
-@media screen and (max-width: 576px) {
-  .qualification__container{
-    grid-template-columns: 1fr;
-  }
-
-}
-
-/*for small devices */   
-@media screen  and (max-width: 350px) {
-  .__box {
-    column-gap: 1.25rem;
-  }
-
-  .qualification__name {
-    font-size: var(--small-font-size);
-  }
+.qualification__line {
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: var(--text-color);
+  transform: translate(6px, -7px);
 }
