--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -86,3 +86,43 @@
   background-color: var(--text-color);
   transform: translate(6px, -7px);
 }
+
+/*============ BREAKPOINTS ======== */
+/* For large devices */
+@media screen and (max-width: 992px) {
+  .qualification__container {
+    /* grid-template-columns: max-content;
+    row-gap: 2rem; */
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* FOR medium devices */
+@media screen and (max-width: 768px) {
+  .qualification__container {
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .qualification__sections {
+    grid-template-columns: initial;
+  }
+  
+  .qualification__button {
+    margin: 0 var(--mb-0-75)
+  }
+}
+
+/*for small devices */
+@media screen and (max-width: 350px) {
+  .qualification__data {
+    gap: 0.5rem;
+  }
+
+  .qualification__name {
+    font-size: var(--small-font-size);
+  }
+}
