--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -18,7 +18,7 @@
 
 .work__item:hover {
     background-color: var(--title-color);
-    color: var(--container-color);
+    color: var(--title-color);
 }
 
 .work__container {
