FIXED Testimonials Area

--- a/src/components/testimonials/testimonial.css
+++ b/src/components/testimonials/testimonial.css
@@ -1,20 +1,21 @@
 .testimonial__container {
-  width: 750px;
+  width: 850px;
 }
 
 .testimonial__card {
   background-color: var(--container-color);
   border:1px solid rgba(0,0,0,0.1);
   padding: 1.5rem 2rem;
-  border-radius: 1.5;
+  border-radius: 1.5rem;
   margin-bottom: var(--mb-3);
-}
+ }
 
 .testimonial__subtitle {
   display: inline-block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-1);
 }
+
 .testimonial__img {
   width: 60px;
   border-radius: 3rem;
@@ -24,7 +25,27 @@
 .testimonial__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
+  /* margin-bottom: var(--mb-0-25); */
 }
 .testimonial__description {
   font-size: var(--small-font-size);
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--text-color) !important;
+  color: black;
+}
+
+.swiper-pagination-buller-active {
+  background-color: var(--title-color) !important;;
+}
+
+@media screen and (max-width: 992px) {
+  .testimonial__container {
+    width: initial;
+  }
+  
+  .testimonial__card {
+    padding: 1.25rem 1.5rem;
+  }
 }
