--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,5 +1,5 @@
 .qualification__container {
-  grid-template-columns: repeat(2, 769px);
+  grid-template-columns: repeat(2, 768px);
   column-gap: 5rem;
   justify-content: right;
 }
@@ -7,8 +7,8 @@
 .qualification__tabs {
   display: flex;
   justify-content: center;
-  /* padding: 1rem 6rem; */
   margin-bottom: var(--mb-2);
+  /* padding: 1rem 6rem; */
 }
 
 .qualification__button {
@@ -27,7 +27,7 @@
   background-color: var(--container-color);
   padding: 1rem 9rem;
   border-radius: 1.25rem;
-  /* display: none; */ 
+  display: none; 
 }
 
 .qualification__content-active {
@@ -67,7 +67,7 @@
   margin-bottom: var(--mb-1);
 }
 
-.qualification__calendar {
+.qualification__calender {
   font-size: var(--small-font-size);
 }
 
@@ -88,11 +88,9 @@
 }
 
 /*============ BREAKPOINTS ======== */
-/* For large devices */
+/* For Large Devices */
 @media screen and (max-width: 992px) {
   .qualification__container {
-    /* grid-template-columns: max-content;
-    row-gap: 2rem; */
     margin-left: auto;
     margin-right: auto;
   }
