--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: var(--mb-2);
-  /* padding: 1rem 6rem; */
+  padding: 1rem 6rem;
 }
 
 .qualification__button {
