--- a/src/components/scrollup/scrollup.css
+++ b/src/components/scrollup/scrollup.css
@@ -1,8 +1,8 @@
 .scrollup {
   position: fixed;
   right: 2.5rem;
-  bottom: 3rem;
-  /* bottom: -20%; */
+  /* bottom: 3rem; */
+  bottom: -20%;
   background-color: var(--title-color);
   opacity: 0.8;
   padding: 0.3rem 0.5rem;
