Final FIX of Scroll-To-Top Function

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -14,14 +14,15 @@
 .qualification__button {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
-  color: var(--title-color);
   margin: 0 var(--mb-1);
   cursor: pointer;
 }
 
-.qualification__button:hover {
-  color: var(--title-color-dark);
-}
+/* .qualification__button {
+  color: var(--title-color);
+  border-radius: 5%;
+  background-color: var(--container-colo-dark);
+} */
 
 .qualification__content {
   background-color: var(--container-color);
@@ -30,6 +31,7 @@
 
 .qualification__content-active {
   display: block;
+
 }
 
 .qualification__data {
@@ -44,7 +46,10 @@
 }
 
 .qualification__active {
-  color: var(--title-color-dark);
+  color: var(--container-color);
+  background-color: var(--text-color);
+  padding: .5rem;
+  border-radius: 5%;
 }
 
 .qualification__sections {
