--- a/src/components/testimonials/testimonial.css
+++ b/src/components/testimonials/testimonial.css
@@ -25,14 +25,13 @@
 .testimonial__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  /* margin-bottom: var(--mb-0-25); */
 }
 .testimonial__description {
   font-size: var(--small-font-size);
 }
 
 .swiper-pagination-bullet {
-  background-color: var(--text-color) !important;
+  /* background-color: var(--text-color-dark) !important; */
   color: black;
 }
 
