--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -67,10 +67,10 @@
 }
 
 .home__img {
-  background: url(../../assets/one_piece_logo.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  /* background: url(../../assets/one_piece_logo.jpg); */
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-size: cover !important;
   box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
   order: 1;
   justify-self: center;
