--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /*========== GOOGLE FONTS ============*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap');
+
 /*========== VARIABLES CSS ===========*/
 :root{
   --header-height: 3rem;
@@ -50,7 +51,7 @@
 --z-modal: 1000;
 }
 
-/* Responsive typography */
+/* Responsive Typography */
 @media screen and (max-width: 992px) {
   :root {
     --big-font-size: 2.75rem;
@@ -168,7 +169,8 @@ margin-left: var(--mb-0-5);
 
 
 /*============ BREAKPOINTS ======== */
-/* For large devices */
+
+/* For Large Devices */
 @media screen and (max-width: 992px) {
   .container {
     margin-left: var(--mb-1-5);
@@ -185,7 +187,7 @@ margin-left: var(--mb-0-5);
   height: 22px;
 }
 
-/* FOR medium devices */
+/* For Medium Devices */
 @media screen and (max-width: 768px) {
 body{
   margin: 0 0 var(--header-height) 0;
@@ -204,7 +206,7 @@ margin-bottom: var(--mb-3);
 
 }
 
-/*for small devices */ 
+/*For Small Devices */ 
   
 @media screen  and (max-width: 350px) {
   :root {
