--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -8,7 +8,12 @@
   position: relative;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--container-color );
-  padding: 6rem 0 2rem 2.5rem;
+  padding: 3rem 1rem 1.5rem 2rem;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+  border-radius: 1.25rem;
+
 }
 
 .services__icon {
@@ -22,6 +27,7 @@
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
+      
 }
 
 .services__button {
