--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -7,8 +7,8 @@
 
 .skills__content {
   background-color: var(--container-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 2rem;
+  border: .5px solid rgba(0, 0, 0, 0.1);
+  padding: .5rem;
   margin: 1rem;
   border-radius: 1.25rem;
 } 
