--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: var(--z-fixed);
+  z-index: var(--z-fixed) !important;
   background-color: var(--body-color);
 }
 
