--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -12,7 +12,7 @@
 
 .home__content {
   grid-template-columns: 116px repeat(2, 1fr);
-  padding-top: 5.5rem;
+  padding-top: 2.5rem;
   column-gap: 2rem;
   align-items: center;
 }
@@ -45,7 +45,7 @@
 
 .home__subtitle {
   position: relative;
-  font-size: var(--h3-font-size);
+  font-size: var(--h5-font-size);
   padding-left: 5.4rem;
   font-weight: var(--font-normal);
   margin-bottom: var(--mb-1);
@@ -77,7 +77,16 @@
   width: 300px;
   height: 300px;
   animation: profile__animate 8s ease-in-out infinite 1s;
+  filter: drop-shadow(0px 10px 10px #01be9570);
+  transition: transform 400ms ease-in-out;
+
 }
+
+
+.home__img:hover {
+  transform: translateY(-10px);
+}
+
 
 @keyframes profile__animate {
   0% {
