--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  width: 100%;
-  margin: 0 auto;
+  width: 100vw !important;
+  /* margin: 0 auto; */
+  overflow-x: hidden !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
