--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,9 @@
 .header {
-  width: 100vw !important;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  z-index: 1000000 !important;
+  z-index: var(--z-fixed);
   background-color: var(--body-color);
 }
 
