--- a/src/Component/App.css
+++ b/src/Component/App.css
@@ -1,11 +1,12 @@
-body{
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow-x: hidden !important;
+  /* overflow-x: hidden !important; */
 }
-.data{
-  border: 2px solid black;
-  padding: 10px;
-  margin: 10px;
+
+.main {
+  /* overflow-x: hidden !important; */
+  padding: 0;
+  margin: 0;
 }
