--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  width: 100vw !important;
+  width: 100%;
   /* margin: 0 auto; */
   overflow-x: hidden !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
